--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,12 +10,12 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/permissionButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:text="@string/perdirPermissao"
@@ -24,49 +24,49 @@
         app:layout_constraintTop_toBottomOf="@+id/timeTravelTextView" />
 
     <Button
-        android:id="@+id/ativarGpsButton"
+        android:id="@+id/turnOnGpsButton"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:text="@string/ativarGpsButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/permissionButton" />
 
     <Button
-        android:id="@+id/desativarGpsButton"
+        android:id="@+id/offGpsButton"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:text="@string/desativarGpsButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/permissionButton" />
 
     <Button
-        android:id="@+id/iniciarPercursoButton"
+        android:id="@+id/initTravelButton"
         android:layout_width="170dp"
         android:layout_height="44dp"
         android:layout_marginTop="24dp"
         android:text="@string/iniciarPercurso"
-        app:layout_constraintEnd_toEndOf="@+id/ativarGpsButton"
-        app:layout_constraintStart_toStartOf="@+id/ativarGpsButton"
-        app:layout_constraintTop_toBottomOf="@+id/ativarGpsButton" />
+        app:layout_constraintEnd_toEndOf="@+id/turnOnGpsButton"
+        app:layout_constraintStart_toStartOf="@+id/turnOnGpsButton"
+        app:layout_constraintTop_toBottomOf="@+id/turnOnGpsButton" />
 
     <Button
-        android:id="@+id/terminarPercursoButton"
+        android:id="@+id/finishTravelPercursoButton"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/terminarPercurso"
-        app:layout_constraintEnd_toEndOf="@+id/desativarGpsButton"
-        app:layout_constraintStart_toStartOf="@+id/desativarGpsButton"
-        app:layout_constraintTop_toBottomOf="@+id/desativarGpsButton" />
+        app:layout_constraintEnd_toEndOf="@+id/offGpsButton"
+        app:layout_constraintStart_toStartOf="@+id/offGpsButton"
+        app:layout_constraintTop_toBottomOf="@+id/offGpsButton" />
 
     <TextView
-        android:id="@+id/distanciaTextView"
+        android:id="@+id/travelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -74,20 +74,20 @@
         android:layout_marginTop="32dp"
         android:text="@string/distanciaPercorrida"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iniciarPercursoButton" />
+        app:layout_constraintTop_toBottomOf="@+id/initTravelButton" />
 
     <TextView
-        android:id="@+id/tempoTextview"
+        android:id="@+id/timeTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/tempoPercorrido"
-        app:layout_constraintEnd_toEndOf="@+id/distanciaTextView"
-        app:layout_constraintStart_toStartOf="@+id/distanciaTextView"
-        app:layout_constraintTop_toBottomOf="@+id/distanciaTextView" />
+        app:layout_constraintEnd_toEndOf="@+id/travelTextView"
+        app:layout_constraintStart_toStartOf="@+id/travelTextView"
+        app:layout_constraintTop_toBottomOf="@+id/travelTextView" />
 
     <EditText
-        android:id="@+id/distanciaEditText"
+        android:id="@+id/travelEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -96,22 +96,23 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/distanciaTextView"
-        app:layout_constraintTop_toBottomOf="@+id/terminarPercursoButton" />
+        app:layout_constraintStart_toEndOf="@+id/travelTextView"
+        app:layout_constraintTop_toBottomOf="@+id/finishTravelPercursoButton" />
 
     <Chronometer
-        android:id="@+id/tempoChrometer"
+        android:id="@+id/timeChrometer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        app:layout_constraintEnd_toEndOf="@+id/distanciaEditText"
-        app:layout_constraintStart_toStartOf="@+id/distanciaEditText"
-        app:layout_constraintTop_toBottomOf="@+id/distanciaEditText" />
+        app:layout_constraintEnd_toEndOf="@+id/travelEditText"
+        app:layout_constraintStart_toStartOf="@+id/travelEditText"
+        app:layout_constraintTop_toBottomOf="@+id/travelEditText" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/searchEditText"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
